# torchlib_pratices

./: .gitignore  CMakeLists.txt  README.md  createRadnTensor.cc  main.cpp  setup.sh
